# particle-sim

./: CMakeLists.txt
config/: display.json  simulation.json
src/: get-settings.cpp  settings.h
src/common/: color.h  vec.h
src/display/: display.h
src/simulation/: element-reg.h  elementcommons.h  simulation-area.h
